--- a/index.html
+++ b/index.html
@@ -1,60 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo for Rust + WebAssembly threads</title>
+    <title>WebGL - 四角を描画</title>
     <style>
-        html, body {
-            height: 100vh;
-            margin: 0;
-        }
-
         body {
+            margin: 0;
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #222; /* 背景色 */
         }
-
-        .button-container {
-            display: flex;
-            gap: 3pt;
-        }
-
-        input[type="button"] {
-            flex: 1; /* Distribute available space equally among buttons */
-        }
-
-        #canvas-container {
-            flex-grow: 1;
-            display: flex;
-            overflow: hidden;
-        }
-
-        #canvas {
-            max-width: 100%; /* Make canvas responsive */
-            max-height: 100%; /* Make canvas responsive */
-            width: auto; /* Make canvas responsive */
-            height: auto; /* Make canvas responsive */
-            aspect-ratio: 1; /* Preserve aspect ratio */
-        }
-
-        p {
-            padding: 3pt;
+        canvas {
+            border: 1px solid #fff; /* キャンバスの境界線 */
         }
     </style>
+    <script src="index.js" type="module"></script>
 </head>
 <body>
-    <p>This is a demo for <a href="https://github.com/RReverser/wasm-bindgen-rayon">wasm-bindgen-rayon</a>, generating a <a href="https://en.wikipedia.org/wiki/Mandelbrot_set">Mandelbrot fractal</a> with WebAssembly threads.</p>
-    <div class="button-container">
-        <input type="button" id="singleThread" value="Draw using a single thread" disabled>
-        <input type="button" id="multiThread" value="Draw using all available threads" disabled>
-    </div>
-    <p><output id="time">Click one of the buttons to see the image & timings.</output></p>
-    <div id="canvas-container">
-        <canvas id="canvas" width="600" height="600"></canvas>
-    </div>
-    <script type="module" src="index.js"></script>
+    <canvas id="canvas"></canvas>
 </body>
 </html>
