Shows thread number

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div id="slider-value">6000</div> <!-- 値表示 -->
         </div>
         <button id="reset-button">Reset</button>
-        <div id="thread-count">Running with 12 threads</div>
+        <div id="thread-count"></div>
     </div>
 
     <script>
